Swashbuckle.Core/SwaggerUi/CustomAssets/screen.css
/* ... */
.swagger-section .swagger-ui-wrap form.form_box input[type=submit] {
  display: block;
  padding: 10px;
}
.swagger-section .swagger-ui-wrap form.form_box p.weak {
  font-size: 0.8em;
}
.swagger-section .swagger-ui-wrap form.form_box p {
  font-size: 0.9em;
  padding: 0 0 15px;
  color: #7e7b6d;
}
.swagger-section .swagger-ui-wrap form.form_box p a {
  color: #646257;
}
.swagger-section .swagger-ui-wrap form.form_box p strong {
  color: black;
}
.swagger-section .swagger-ui-wrap .operation-status td.markdown > p:last-child {
  padding-bottom: 0;
}
.swagger-section .title {
  font-style: bold;
}
.swagger-section .secondary_form {
  display: none;
}
.swagger-section .main_image {
  display: block;
  margin-left: auto;
  margin-right: auto;
}
.swagger-section .oauth_body {
  margin-left: 100px;
  margin-right: 100px;
}
.swagger-section .oauth_submit {
  text-align: center;
}
.swagger-section .api-popup-dialog {
  z-index: 10000;
  position: absolute;
  width: 500px;
  background: #FFF;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 5px;
  display: none;
  font-size: 13px;
  color: #777;
}
.swagger-section .api-popup-dialog .api-popup-title {
  font-size: 24px;
  padding: 10px 0;
}
.swagger-section .api-popup-dialog .api-popup-title {
  font-size: 24px;
  padding: 10px 0;
}
.swagger-section .api-popup-dialog p.error-msg {
  padding-left: 5px;
  padding-bottom: 5px;
}
.swagger-section .api-popup-dialog button.api-popup-authbtn {
  height: 30px;
}
.swagger-section .api-popup-dialog button.api-popup-cancel {
  height: 30px;
}
.swagger-section .api-popup-scopes {
  padding: 10px 20px;
}
.swagger-section .api-popup-scopes li {
  padding: 5px 0;
  line-height: 20px;
}
.swagger-section .api-popup-scopes .api-scope-desc {
  padding-left: 20px;
  font-style: italic;
}
.swagger-section .api-popup-scopes li input {
  position: relative;
  top: 2px;
}
.swagger-section .api-popup-actions {
  padding-top: 10px;
}
.swagger-section .access {
  float: right;
}
.swagger-section .auth {
  float: right;
}
.swagger-section .api-ic {
  height: 18px;
  vertical-align: middle;
  display: inline-block;
  background: url(../images/explorer_icons-png) no-repeat;
}
.swagger-section .api-ic .api_information_panel {
  position: relative;
  margin-top: 20px;
  margin-left: -5px;
  background: #FFF;
  border: 1px solid #ccc;
  border-radius: 5px;
  display: none;
  font-size: 13px;
  max-width: 300px;
  line-height: 30px;
  color: black;
  padding: 5px;
}
.swagger-section .api-ic .api_information_panel p .api-msg-enabled {
  color: green;
}
.swagger-section .api-ic .api_information_panel p .api-msg-disabled {
  color: red;
}
.swagger-section .api-ic:hover .api_information_panel {
  position: absolute;
  display: block;
}
.swagger-section .ic-info {
  background-position: 0 0;
  width: 18px;
  margin-top: -6px;
  margin-left: 4px;
}
.swagger-section .ic-warning {
  background-position: -60px 0;
  width: 18px;
  margin-top: -6px;
  margin-left: 4px;
}
.swagger-section .ic-error {
  background-position: -30px 0;
  width: 18px;
  margin-top: -6px;
  margin-left: 4px;
}
.swagger-section .ic-off {
  background-position: -90px 0;
  width: 58px;
  margin-top: -4px;
  cursor: pointer;
}
.swagger-section .ic-on {
  background-position: -160px 0;
  width: 58px;
  margin-top: -4px;
  cursor: pointer;
}
.swagger-section #header {
  background-color: #89bf04;
  padding: 14px;
}
.swagger-section #header a#logo {
  font-size: 1.5em;
  font-weight: bold;
  text-decoration: none;
  background: transparent url(../images/logo_small-png) no-repeat left center;
  padding: 20px 0 20px 40px;
  color: white;
}
.swagger-section #header form#api_selector {
  display: block;
  clear: none;
  float: right;
}
.swagger-section #header form#api_selector .input {
  display: block;
  clear: none;
  float: left;
  margin: 0 10px 0 0;
}
.swagger-section #header form#api_selector .input input#input_apiKey {
  width: 200px;
}
.swagger-section #header form#api_selector .input input#input_baseUrl {
  width: 400px;
}
.swagger-section #header form#api_selector .input a#explore {
  display: block;
  text-decoration: none;
  font-weight: bold;
  padding: 6px 8px;
  font-size: 0.9em;
  color: white;
  background-color: #547f00;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  -o-border-radius: 4px;
  -ms-border-radius: 4px;
  -khtml-border-radius: 4px;
  border-radius: 4px;
}
.swagger-section #header form#api_selector .input a#explore:hover {
  background-color: #547f00;
}
.swagger-section #header form#api_selector .input input {
  font-size: 0.9em;
  padding: 3px;
  margin: 0;
}
.swagger-section #content_message {
  margin: 10px 15px;
  font-style: italic;
  color: #999999;
}
.swagger-section #message-bar {
  min-height: 30px;
  text-align: center;
  padding-top: 10px;
}

